# FogML-RiscV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  linker.ld  main.c  results-fft  send.py  size.ods
1r/: 1wnioski  out-cmul  out-mul64  piestack.py  results  results-dark-1dsp.ods  results-dark-2learn-optim.ods  results-dark-3infer.ods  results-dark-4cmul.ods  results-dark.ods  results-nk  time.ods
1r/new/: resnew.ods
1r/py4prof/: data.py  piestack.py  results.py
1r/py5cmul/: data.py  piestack.py
include/: fogml_config.h  fogml_config_12.h  fogml_config_18fft.h  printf_config.h
src/: random_forest_model.c
